--- a/force-app/main/default/classes/CaseEscalationJob.cls
+++ b/force-app/main/default/classes/CaseEscalationJob.cls
@@ -1,3 +1,5 @@
+// Updated by Abhishek :- Not used anywhere, confirmed from Sidhant. April 15 2025
+
 public class CaseEscalationJob implements Schedulable {
 
     private List<Case> casesToEscalate;
