--- a/force-app/main/default/classes/CaseStatusEscalationHandler.cls
+++ b/force-app/main/default/classes/CaseStatusEscalationHandler.cls
@@ -1,3 +1,5 @@
+// Updated by Abhishek :- Not used anywhere, confirmed from Sidhant. April 15 2025
+
 public class CaseStatusEscalationHandler {
 
     // Method to schedule the action after 2 minutes
