--- a/force-app/main/default/classes/FlightPreviewTest.cls
+++ b/force-app/main/default/classes/FlightPreviewTest.cls
@@ -1,19 +1,14 @@
 /**
 * @File Name : FlightPreviewTest.cls
 * @Description : Test Class for FlightPreview.cls
-* @Author : Abhishek
-* @Last Modified By : Abhishek
-* @Last Modified On : April 10, 2025
-* @Modification Log :
-*==============================================================================
-* Ver | Date | Author | Modification
-*==============================================================================
-* 1.0 | April 10, 2025 |  Abhishek | Initial Version
+* @Author : Maxify Development Team
+* @Created Date : April 10, 2025
 **/
 @isTest
 public class FlightPreviewTest {
-	@isTest
-    static void testGetOpportunityDetails() {
+    
+    @testSetup
+    static void setupData() {
         
         Date myDate = Date.today().addDays(5);
         DateTime dt = DateTime.newInstance(myDate, Time.newInstance(0, 0, 0, 0));
@@ -25,48 +20,51 @@ public class FlightPreviewTest {
         
         // Creating test data
         Opportunity opp = new Opportunity();
-            opp.Name = 'Test Opportunity';
-            opp.StageName = 'Prospecting';
-            opp.CloseDate = Date.today().addDays(10);
-            opp.Service_Type__c = 'Arrival';
-            opp.Number_of_Adults__c = 2;
-            opp.Number_of_Children__c = 1;
-            opp.Number_of_Infants__c = 1;
-            opp.Date_of_Arrival__c = arrivalDate;
-            opp.Date_of_Departure__c = departureDate;
-            opp.Service_Airport__c = 'DEL';
-            opp.Arriving_Airport__c = 'BOM';
-            opp.Departure_Airport__c = 'DEL';
-            opp.Flight_Number_Arrival__c = 'AI101';
-            opp.Flight_Number_Departure__c = 'AI202';
-            opp.Flight_Type__c = 'International';
-            opp.STA_Time__c = '10:00 AM';
-            opp.STD_Time__c = '2:00 PM';
-            opp.Sector__c = 'Sector A';
-       
-        insert opp;
+        opp.Name = 'Test Opportunity';
+        opp.StageName = 'Prospecting';
+        opp.CloseDate = Date.today().addDays(10);
+        opp.Service_Type__c = 'Arrival';
+        opp.Number_of_Adults__c = 2;
+        opp.Number_of_Children__c = 1;
+        opp.Number_of_Infants__c = 1;
+        opp.Date_of_Arrival__c = arrivalDate;
+        opp.Date_of_Departure__c = departureDate;
+        opp.Service_Airport__c = 'DEL';
+        opp.Arriving_Airport__c = 'BOM';
+        opp.Departure_Airport__c = 'DEL';
+        opp.Flight_Number_Arrival__c = 'AI101';
+        opp.Flight_Number_Departure__c = 'AI202';
+        opp.Flight_Type__c = 'International';
+        opp.STA_Time__c = '10:00 AM';
+        opp.STD_Time__c = '2:00 PM';
+        opp.Sector__c = 'Sector A';
         
+        insert opp;      
+        
+    }
+    @isTest
+    static void testGetOpportunityDetails() {
+        
+        Opportunity opp = [Select id,Number_of_Adults__c,Service_Type__c from Opportunity where Name = 'Test Opportunity' LIMIT 1];
         Map<String, Object> fieldMap = new Map<String, Object>{
             'Number_of_Adults__c' => 4,
-            'Service_Type__c' => 'Departure'
-        };
-        
-        Test.startTest();
-        	FlightPreview.bookingWrapper wrapper = FlightPreview.getOpportunityDetails(opp.Id);
-        	FlightPreview.saveData(opp.Id, fieldMap);
-            try {
-                FlightPreview.saveData(null, fieldMap);
-                System.assert(false, 'Exception due to null ID');
-            } catch (AuraHandledException e) {
-                System.debug('e.getMessage()>>>'+e.getMessage());
-            }
+                'Service_Type__c' => 'Departure'
+                };
+                    
+                    Test.startTest();
+        FlightPreview.bookingWrapper wrapper = FlightPreview.getOpportunityDetails(opp.Id);
+        FlightPreview.saveData(opp.Id, fieldMap);
+        try {
+            FlightPreview.saveData(null, fieldMap);
+            System.assert(false, 'Exception due to null ID');
+        } catch (AuraHandledException e) {
+            System.debug('e.getMessage()>>>'+e.getMessage());
+        }
         Test.stopTest();
         
         System.assertEquals(2, wrapper.NoOfAdult);
         
         Opportunity updatedOpp = [SELECT Id, Number_of_Adults__c, Service_Type__c FROM Opportunity WHERE Id = :opp.Id];
-        System.assertEquals(4, updatedOpp.Number_of_Adults__c);
-        
-
+        System.assertEquals(4, updatedOpp.Number_of_Adults__c); 
     }
 }
