--- a/force-app/main/default/classes/LeadFromCaseControllerTest.cls
+++ b/force-app/main/default/classes/LeadFromCaseControllerTest.cls
@@ -1,14 +1,8 @@
 /**
 * @File Name : LeadFromCaseControllerTest.cls
 * @Description : Test Class for LeadFromCaseController.cls
-* @Author : Abhishek
-* @Last Modified By : Abhishek
-* @Last Modified On : April 14, 2025
-* @Modification Log :
-*==============================================================================
-* Ver | Date | Author | Modification
-*==============================================================================
-* 1.0 | April 14, 2025 |  Abhishek | Initial Version
+* @Author : Maxify Development Team
+* @Created Date : April 10, 2025
 **/
 @isTest
 public class LeadFromCaseControllerTest {
