--- a/force-app/main/default/classes/CaseEscalationJobTest.cls
+++ b/force-app/main/default/classes/CaseEscalationJobTest.cls
@@ -1,56 +1,16 @@
 /**
 * @File Name : CaseEscalationJobTest.cls
 * @Description : Test Class for CaseEscalationJob.cls
-* @Author : Abhishek
-* @Last Modified By : Abhishek
-* @Last Modified On : April 10, 2025
-* @Modification Log :
-*==============================================================================
-* Ver | Date | Author | Modification
-*==============================================================================
-* 1.0 | April 10, 2025 |  Abhishek | Initial Version
+* @Author : Maxify Development Team
+* @Created Date : April 10, 2025
 **/
 @isTest
 public class CaseEscalationJobTest {
-
-    @isTest
-    static void testCaseEscalationJob() {
-        User u = new User(
-            Alias = 'testusr',
-            Email='testuser@example.com',
-            EmailEncodingKey='UTF-8',
-            LastName='Test User',
-            LanguageLocaleKey='en_US',
-            LocaleSidKey='en_US',
-            ProfileId = [SELECT Id FROM Profile WHERE Name='Standard User' LIMIT 1].Id,
-            TimeZoneSidKey='America/Los_Angeles',
-            Username='testuser' + DateTime.now().getTime() + '@example.com'
-        );
-        insert u;
-
-        Case testCase = new Case(
-            Subject = 'Test Escalation Case',
-            Status = 'New',
-            OwnerId = u.Id
-        );
-        insert testCase;
-
-        List<Case> casesList = new List<Case>{testCase};
-        CaseEscalationJob job = new CaseEscalationJob(casesList);
-
-        Test.startTest();
-        	job.execute(null);
-        	CaseStatusEscalationHandler.scheduleEscalation(casesList);
-        Test.stopTest();
-
-        Case updatedCase = [SELECT Id, Status FROM Case WHERE Id = :testCase.Id];
-        System.assertEquals('Escalated', updatedCase.Status, 'Case escalated.');
-
-    }
-
-    @isTest
-    static void testSendEscalationEmail() {
-
+    
+    // Creating test Data
+    @testSetup
+    static void setupData() {
+        
         User manager = new User(
             Alias = 'mgrusr',
             Email='manager@example.com',
@@ -63,7 +23,7 @@ public class CaseEscalationJobTest {
             Username='manageruser' + DateTime.now().getTime() + '@example.com'
         );
         insert manager;
-
+        
         User associate = new User(
             Alias = 'assoc',
             Email='associate@example.com',
@@ -77,11 +37,38 @@ public class CaseEscalationJobTest {
             ManagerId = manager.Id
         );
         insert associate;
-
+        
+        Case testCase = new Case(
+            Subject = 'Test Escalation Case',
+            Status = 'New',
+            OwnerId = manager.Id
+        );
+        insert testCase;
+        
+    }
+    @isTest
+    static void testCaseEscalationJob() {
+        List<Case> casesList = [Select id, Subject, Status from Case where Subject = 'Test Escalation Case' Limit 1];//new List<Case>{testCase};
+        CaseEscalationJob job = new CaseEscalationJob(casesList);
+        
         Test.startTest();
-        	CaseEscalationJob.sendEscalationEmail(associate.Id);
+        job.execute(null);
+        CaseStatusEscalationHandler.scheduleEscalation(casesList);
         Test.stopTest();
-
+        
+        Case updatedCase = [SELECT Id, Status FROM Case WHERE Id = :casesList[0].Id];
+        System.assertEquals('Escalated', updatedCase.Status, 'Case escalated.');
+        
+    }
+    
+    @isTest
+    static void testSendEscalationEmail() {
+        User associate = [Select id, Name from User where Email='associate@example.com'];
+        
+        Test.startTest();
+        CaseEscalationJob.sendEscalationEmail(associate.Id);
+        Test.stopTest();
+        
         System.assert(true, 'Email send executed successfully.');
     }
 }
